--- a/blog/2024-03-19-launch/index.mdx
+++ b/blog/2024-03-19-launch/index.mdx
@@ -1,6 +1,6 @@
 ---
-slug: welcome
-title: Welcome
+slug: introducing-pipeable
+title: Introducing Pipeable
 authors: [dvitanov, jlozano, pdobrev]
 tags: [announcements, launch]
 ---
@@ -85,6 +85,6 @@ PipeableScript is a runtime that allows Pipeable developers to write their autom
 
 ### Conclusion
 
-Thanks for making it this far! If you are interested in learning more, you can check out out [main Github repo](https://github.com/PipeableHQ/pipeable-ios) or try out one of our [sample apps](https://github.com/PipeableHQ/pipeable-ios-samples). If you want to receive updates about Pipeable, you can sign up for updates [here](https://forms.gle/i8C7F3zcuizWkien7). We are very excited about collaborating with folks building Agentic AI on mobile, if this is you, please grab some time on our [Calendly](https://calendly.com/deyan-vitanov/30min), send us an [email](mailto:hello@pipeable.com) or DM us on [Twitter](https://twitter.com/pipeablehq).
+Thanks for making it this far! If you are interested in learning more, you can check out out [Github repo](https://github.com/PipeableHQ/pipeable-ios) or try out one of our [sample apps](https://github.com/PipeableHQ/pipeable-ios-samples). If you want to receive updates about Pipeable, you can sign up for updates [here](https://forms.gle/i8C7F3zcuizWkien7). We are very excited about collaborating with folks building Agentic AI on mobile, if this is you, please grab some time on our [Calendly](https://calendly.com/deyan-vitanov/30min), send us an [email](mailto:hello@pipeable.com) or DM us on [Twitter](https://twitter.com/pipeablehq).
 
 [^1]: We are still working through all the details here, if you have a use case where this compatibility would be helpful please grab some time on our [Calendly](https://calendly.com/deyan-vitanov/30min), send us an [email](mailto:hello@pipeable.com) or DM us on [Twitter](https://twitter.com/pipeablehq).
