link for sample app, update Agentic AI section

--- a/blog/2024-03-19-launch/index.mdx
+++ b/blog/2024-03-19-launch/index.mdx
@@ -64,9 +64,13 @@ A couple of things to note:
 
 - The automation is operating directly on the website’s document object model (DOM) and allows you, the developer, to do anything that a user can do, even if there is no API or the API is restricted.
 - If you are familiar with Playwright or Puppeteer then the above code should look familiar to you and this is intentional, we designed Pipeable to be compatible with these frameworks (see Pipeable Scripting below).
-- You can try out the above code by running [this sample app](https://github.com/PipeableHQ/pipeable-ios-samples).
+- You can checkout the full code and a sample app [here](https://github.com/PipeableHQ/pipeable-ios-samples/tree/main).
 
 ### Agentic AI
+
+While Pipeable can be used for many things, we are particularly excited about unlocking agentic AI on mobile through the power of webview automation. Specifically the ability to connect to 3rd party websites and perform actions there on behalf of the user, from within a mobile app. This capability paves the way for richer, more dynamic app experiences, turning mobile applications into powerful tools that not only access web information but interact with web ecosystems on behalf of users. We're eager to see the creative solutions developers will build with Pipeable, enhancing mobile app functionality and empowering users.
+
+To get a feel for what this could look like you can check out a simple AirBnB booking agent that we built with Pipeable and GPT4.
 
 ### Why webviews and Pipeable?
 
