link to samples repo for airbnb agent

--- a/blog/2024-03-19-launch/index.mdx
+++ b/blog/2024-03-19-launch/index.mdx
@@ -70,7 +70,7 @@ A couple of things to note:
 
 While Pipeable can be used for many things, we are particularly excited about unlocking agentic AI on mobile through the power of webview automation. Specifically the ability to connect to 3rd party websites and perform actions there on behalf of the user, from within a mobile app. This capability paves the way for richer, more dynamic app experiences, turning mobile applications into powerful tools that not only access web information but interact with web ecosystems on behalf of users. We're eager to see the creative solutions developers will build with Pipeable, enhancing mobile app functionality and empowering users.
 
-To get a feel for what this could look like you can check out a simple AirBnB booking agent that we built with Pipeable and GPT4.
+To get a feel for what this could look like you can check out a simple AirBnB booking agent that we built with Pipeable and GPT4 in our samples [repo](<(https://github.com/PipeableHQ/pipeable-ios-samples)>).
 
 ### Why webviews and Pipeable?
 
