--- a/blog/2024-03-19-launch/index.mdx
+++ b/blog/2024-03-19-launch/index.mdx
@@ -64,7 +64,7 @@ A couple of things to note:
 
 - The automation is operating directly on the website’s document object model (DOM) and allows you, the developer, to do anything that a user can do, even if there is no API or the API is restricted.
 - If you are familiar with Playwright or Puppeteer then the above code should look familiar to you and this is intentional, we designed Pipeable to be compatible with these frameworks (see Pipeable Scripting below).
-- You can checkout the full code and a sample app [here](https://github.com/PipeableHQ/pipeable-ios-samples/tree/main).
+- You can checkout the full code in a sample app [here](https://github.com/PipeableHQ/pipeable-ios-samples/tree/main).
 
 ### Agentic AI
 
