update to launch blog post

--- a/blog/2024-03-19-launch/index.mdx
+++ b/blog/2024-03-19-launch/index.mdx
@@ -1,5 +1,5 @@
 ---
-slug: introducing-pipeable
+slug: pipeable-intro
 title: Introducing Pipeable
 authors: [dvitanov, jlozano, pdobrev]
 tags: [announcements, launch]
